Finish the UnionSourceManager, UnionRedirection, and UnionColumnSource changes, barring the update processing